# docker_whatsmyip

./: Dockerfile  README.md  README.rst  pyproject.toml
dockerip/: entrypoint.sh  main.py
tests/: test_dockerip.py
