[tool.poetry]
name = "dockerip"
version = "0.1.0"
description = ""
authors = ["Stanley Zheng <szheng@cyber.nyc.gov>"]

[tool.poetry.dependencies]
python = "^3.7"
gunicorn = "^20.1.0"
APScheduler = "^3.8.1"
Flask = "^2.0.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
